# entangled-state-attention

./: .gitignore  CITATION.cff  README.md  pyproject.toml
examples/: minimal_esa.py  tiny_lm_demo.py
src/esa/: __init__.py  block.py  config.py  esa.py  model.py  scan.py  utils.py
tests/: test_causality.py  test_esa_shape.py  test_scan_equivalence.py
